# Gravity-Lang

./: .gitignore  ADVANCED_FEATURES.md  BUILD_WINDOWS.md  CMakeLists.txt  CONTRIBUTING.md  FINAL_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_OLD.md  RELEASE_NOTES.md  SUMMARY.md  WINDOWS.md  build-windows.bat  build-windows.ps1  gravity_lang_interpreter.py
.github/workflows/: build.yml
artifacts/: moon_positions.csv
cpp/: gravity_compiler.cpp  gravity_interpreter.cpp  gravity_kernel.cpp
examples/: advanced_features.gravity  all_features_one.gravity  binary_star.gravity  comprehensive_demo.gravity  custom_gravity_demo.py  earth_moon.gravity  galaxy_collision.gravity  integrator_comparison.gravity  mond_vs_newtonian.gravity  moon_orbit.gravity  numpy_performance_demo.gravity  rocket_testing.gravity  scientific_loop.gravity  solar_system.gravity  strict_validation.gravity  threaded_three_body.gravity
tests/: test_interpreter.py
tools/: telemetry_dashboard.py  validate_against_nasa.sh
